--- a/Task 14/assets/styles.css
+++ b/Task 14/assets/styles.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .header {
@@ -51,4 +52,54 @@ body {
 .image__active {
   width: 35px;
   height: 35px;
+}
+
+/* Основной блок */
+
+.main__block {
+  background: #fff;
+  width: 300px;
+  height: 400px;
+  border-radius: 5px;
+  margin-top: 25px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
+}
+
+.main__block__header {
+  width: 300px;
+  height: 145px;
+  border-radius: 5px;
+  background-image: url("./img/food.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.header__text {
+  margin: 0;
+  color: #fff;
+  padding-left: 25px;
+  padding-bottom: 7px;
+}
+
+.locations__group {
+  margin: 0;
+  color: #fff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding-left: 25px;
+  padding-bottom: 25px;
+}
+
+.main__block__header__img {
+  height: 15px;
+}
+
+.main__block__header__paragraph {
+  margin: 0;
+  font-size: 12px;
 }
