--- a/Task 14/assets/styles.css
+++ b/Task 14/assets/styles.css
@@ -68,7 +68,7 @@ body {
 .main__block__header {
   width: 300px;
   height: 145px;
-  border-radius: 5px;
+  border-radius: 5px 5px 0 0;
   background-image: url("./img/food.jpg");
   background-size: cover;
   background-position: center;
@@ -102,4 +102,40 @@ body {
 .main__block__header__paragraph {
   margin: 0;
   font-size: 12px;
+}
+
+.meal__list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 255px;
+}
+
+.meal__item {
+  width: 100%;
+  height: 65px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid #e1e1e1;
+}
+
+.meal__item :last-child:hover {
+  cursor: pointer;
+  font-size: 23px;
+  color: black;
+}
+
+.meal__list__text {
+  color: #8b8b90;
+  margin: 0 20px;
+}
+
+.meal__list__number {
+  color: #8b8b90;
+  margin: 0 20px;
 }
