--- a/Task 15/assets/styles.css
+++ b/Task 15/assets/styles.css
@@ -9,6 +9,10 @@ body {
   background-image: url("./img/background.jpg");
   background-position: center;
   background-size: cover;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  overflow: hidden;
 }
 
 .left__part {
@@ -34,4 +38,38 @@ body {
   width: 80px;
   padding-top: 25px;
   padding-bottom: 25px;
+}
+
+.arrow__button:hover {
+  cursor: pointer;
+}
+
+/* .right__part {
+  position: absolute;
+  left: 70%;
+  height: 100vh;
+  width: 43%;
+  display: flex;
+  justify-content: flex-end;
+  background-color: rgba(232, 191, 47, 0.7);
+  transform: skewX(-9deg);
+  transform-origin: top left;
+  z-index: 1;
+} */
+
+.overlay {
+  position: absolute;
+  left: 70%;
+  height: 100vh;
+  width: 43%;
+  display: flex;
+  justify-content: flex-end;
+  background-color: rgba(232, 191, 47, 0.7);
+  transform: skewX(-9deg);
+  transform-origin: top left;
+  z-index: 1;
+}
+
+.right__button {
+  z-index: 2;
 }
