--- a/Task 15/assets/styles.css
+++ b/Task 15/assets/styles.css
@@ -44,19 +44,6 @@ body {
   cursor: pointer;
 }
 
-/* .right__part {
-  position: absolute;
-  left: 70%;
-  height: 100vh;
-  width: 43%;
-  display: flex;
-  justify-content: flex-end;
-  background-color: rgba(232, 191, 47, 0.7);
-  transform: skewX(-9deg);
-  transform-origin: top left;
-  z-index: 1;
-} */
-
 .overlay {
   position: absolute;
   left: 70%;
@@ -67,9 +54,73 @@ body {
   background-color: rgba(232, 191, 47, 0.7);
   transform: skewX(-9deg);
   transform-origin: top left;
+  z-index: -1;
+}
+
+.right__part {
   z-index: 1;
+  width: 500px;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 25px;
 }
 
 .right__button {
-  z-index: 2;
+  padding: 0;
+  background: none;
+  outline: none;
+  border: none;
+  display: flex;
+  text-transform: uppercase;
+  align-items: center;
+
+  font-weight: 700;
+  font-size: 16px;
+  gap: 7px;
+}
+
+.rigth__part__content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+  padding-top: 25px;
+}
+
+.right__button_text {
+  margin: 0;
+}
+
+.right__part__main__text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: right;
+  width: 300px;
+  font-size: 32px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.right__part__main__text__header {
+  font-size: 100px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.right__part__main__text__paragraph {
+  margin: 0;
+}
+
+.rigth__part__content__views {
+  display: flex;
+  font-weight: 500;
+  gap: 10px;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 50px;
 }
