Добавил cursor pointer на кнопку

--- a/Task 15/assets/styles.css
+++ b/Task 15/assets/styles.css
@@ -79,6 +79,10 @@ body {
   gap: 7px;
 }
 
+.right__button:hover {
+  cursor: pointer;
+}
+
 .rigth__part__content {
   display: flex;
   flex-direction: column;
