--- a/Task 16/assets/styles.css
+++ b/Task 16/assets/styles.css
@@ -57,7 +57,10 @@ body {
   color: #dedede;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 21px;
+  height: 21px;
+  font-size: 13px;
 }
 
 .now__month {
@@ -66,6 +69,7 @@ body {
   align-items: center;
   width: 21px;
   height: 21px;
+  font-size: 13px;
 }
 
 .now__month__seven {
@@ -79,6 +83,7 @@ body {
   color: #fff;
   width: 21px;
   height: 21px;
+  font-size: 13px;
 }
 
 .table__container {
