--- a/Task 17/assets/styles.css
+++ b/Task 17/assets/styles.css
@@ -37,6 +37,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 15px;
 }
 
 .left__sector__header {
@@ -52,7 +53,14 @@ body {
 .left__sector__button {
   margin: 0;
   outline: none;
-  background: 0;
   border: 0;
   color: #fff;
+  width: 115px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: rgba(106, 167, 149, 0.7);
+  border-radius: 40px 40px;
+  height: 47px;
+  padding: 11px;
 }
