--- a/Task 17/assets/styles.css
+++ b/Task 17/assets/styles.css
@@ -23,7 +23,8 @@ body {
 .left__sector {
   min-height: 100%;
   width: 45%;
-  background-image: url("img/background.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("img/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
