--- a/Task 17/assets/rigthSectro.css
+++ b/Task 17/assets/rigthSectro.css
@@ -39,6 +39,13 @@
   justify-content: space-between;
   font-size: 18px;
   width: 423px;
+  -webkit-mask-image: linear-gradient(
+    90deg,
+    transparent,
+    #fff 0%,
+    #fff 65%,
+    transparent
+  );
 }
 
 .selected:hover {
