--- a/Task 17/assets/rigthSectro.css
+++ b/Task 17/assets/rigthSectro.css
@@ -59,3 +59,18 @@
 .unselected:hover {
   cursor: pointer;
 }
+
+.theme__list {
+  list-style: none;
+  padding: 20px 30px 0 30px;
+  margin: 0;
+}
+
+.theme__item {
+  display: flex;
+}
+
+.theme__item__image {
+  width: 35px;
+  height: 35px;
+}
