--- a/Task 17/assets/rigthSectro.css
+++ b/Task 17/assets/rigthSectro.css
@@ -64,13 +64,66 @@
   list-style: none;
   padding: 20px 30px 0 30px;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 340px;
 }
 
 .theme__item {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.theme__item__main__info {
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
 
 .theme__item__image {
   width: 35px;
   height: 35px;
+}
+
+.theme__item__image__two {
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+}
+
+.theme__item__text {
+  margin: 0;
+  font-size: 13px;
+}
+
+.theme__item__date__block {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+
+.theme__item__date__block__date {
+  margin: 0;
+  font-weight: 300;
+  font-size: 36px;
+}
+
+.years__month__block {
+  font-size: 13px;
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.theme__item__date__block__month {
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.theme__item__date__block__year {
+  margin: 0;
 }
