--- a/Task 18/assets/styles.css
+++ b/Task 18/assets/styles.css
@@ -22,7 +22,8 @@ body {
   border-left: 10px solid black;
   border-radius: 30px 30px 30px 30px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   overflow: hidden;
   position: relative;
   z-index: 1;
@@ -71,4 +72,26 @@ body {
 
 .payment__item {
   width: 280px;
+}
+
+.safe__card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 280px;
+}
+
+.variants__image {
+  width: 20px;
+}
+
+.safe__card__text__header {
+  margin: 0;
+  font-size: 14px;
+}
+
+.safe__card__text__paragraph {
+  margin: 0;
+  font-size: 11px;
+  color: #aaabb5;
 }
