--- a/Task 18/assets/slider.css
+++ b/Task 18/assets/slider.css
@@ -2,15 +2,15 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 44px;
+  height: 26px;
 }
 
 /* Скрываем стандартный checkbox */
 .switch input {
   opacity: 0;
-  width: 0;
-  height: 0;
+  width: 44px;
+  height: 25px;
 }
 
 /* Стили для слайдера */
@@ -21,8 +21,9 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #fff;
   transition: 0.4s;
+  border: 1px solid #ccc;
   border-radius: 34px; /* Круглый фон для слайдера */
 }
 
@@ -30,12 +31,13 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
+  height: 22px;
+  width: 22px;
+  left: -1px;
+  bottom: 0px;
   background-color: white;
   transition: 0.4s;
+  border: 1px solid #ccc;
   border-radius: 50%; /* Круглая кнопка */
 }
 
