--- a/Task 18/assets/styles.css
+++ b/Task 18/assets/styles.css
@@ -63,6 +63,15 @@ body {
   z-index: 1;
 }
 
+.variants {
+  height: 80%;
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
 .header {
   color: white;
   text-transform: uppercase;
@@ -74,11 +83,15 @@ body {
   width: 280px;
 }
 
-.safe__card {
+.function {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 280px;
+  width: 270px;
+}
+.block {
+  display: flex;
+  gap: 15px;
 }
 
 .variants__image {
@@ -87,11 +100,11 @@ body {
 
 .safe__card__text__header {
   margin: 0;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .safe__card__text__paragraph {
   margin: 0;
-  font-size: 11px;
+  font-size: 10px;
   color: #aaabb5;
 }
