--- a/Task 19/assets/styles.css
+++ b/Task 19/assets/styles.css
@@ -20,3 +20,34 @@ body {
   height: 600px;
   background: #fff;
 }
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 30px 0 30px;
+}
+
+.nav__button,
+.icon {
+  margin: 0;
+  padding: 0;
+  background: none;
+  outline: none;
+  border: none;
+  color: #b3b3b3;
+}
+
+.nav__button:hover,
+.icon {
+  color: #000000;
+  cursor: pointer;
+}
+
+.nav__text {
+  text-transform: uppercase;
+  color: #000000;
+  font-weight: 500;
+  font-size: 13px;
+  transform: scaleY(1.2);
+}
