--- a/Task 19/assets/styles.css
+++ b/Task 19/assets/styles.css
@@ -20,6 +20,7 @@ body {
   height: 600px;
   background: #fff;
   /* position: relative; */
+  /* padding: 15px 30px 0 30px; */
 }
 
 .nav {
@@ -83,6 +84,7 @@ body {
   display: flex;
   height: 80px;
   width: 80%;
+  position: relative;
 }
 
 .content__block__image {
@@ -94,4 +96,49 @@ body {
   font-weight: 500;
   font-size: 13px;
   margin: 0;
+}
+
+.map__button {
+  position: absolute;
+  z-index: 2;
+  outline: 0;
+  background: none;
+  border: 0;
+  color: #fff;
+  text-transform: uppercase;
+  background: #4677f6;
+  width: 110px;
+  height: 37px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  top: 86%;
+  left: 65%;
+}
+
+.map__button__image {
+  width: 17px;
+}
+
+.direction__block {
+  display: flex;
+  flex-direction: column;
+  padding: 15px 30px 0 30px;
+}
+
+.direction__item {
+  display: flex;
+  gap: 20px;
+}
+
+.info__block__text {
+  margin: 0;
+  color: #aaaaaa;
+  font-size: 10px;
+}
+
+.info__block__header {
+  margin: 5px 0 0 0;
+  font-size: 12px;
 }
