--- a/Task 20/assets/css/main.css
+++ b/Task 20/assets/css/main.css
@@ -1,6 +1,9 @@
+@import url("header.css");
+
 body {
   margin: 0;
   padding: 0;
+  background: #f6f8f9;
 }
 
 .container {
@@ -8,4 +11,7 @@ body {
   padding: 0;
   background: #f6f8f9;
   height: 100vh;
+  width: 1280px;
+  display: flex;
+  justify-content: center;
 }
