--- a/Task 20/assets/css/header.css
+++ b/Task 20/assets/css/header.css
@@ -1,17 +1,33 @@
+.header__block {
+  align-items: center;
+  border-bottom: 2px solid #f1f1f1;
+  height: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .header {
   margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
-  border-bottom: 2px solid #f1f1f1;
+  justify-content: space-around;
+  width: 1280px;
   height: 100px;
 }
 
 .logo__img {
-  width: 25px;
+  width: 35px;
 }
 
 .search {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  border-right: 2px solid #f1f1f1;
+  border-left: 2px solid #f1f1f1;
+  padding: 0 20px 0 20px;
   position: relative;
 }
 .button__search {
@@ -19,8 +35,8 @@
   outline: none;
   border: none;
   position: absolute;
-  left: 125px;
-  top: 8px;
+  right: 30px;
+  top: 39px;
 }
 
 .search__input {
@@ -29,10 +45,10 @@
   font-weight: 500;
   border: 1px solid #dedede;
   border-radius: 30px;
-  height: 30px;
-  width: 150px;
-  padding-left: 15px;
-  padding-bottom: 5px;
+  height: 25px;
+  width: 170px;
+  padding-left: 12px;
+  padding-bottom: 4px;
 }
 
 .search__logo {
@@ -41,8 +57,39 @@
 
 .nav__list {
   list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 35px;
+  color: #403d32;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 17px;
+}
+
+.buttons__actions {
+  height: 100%;
+  border-right: 2px solid #f1f1f1;
+  border-left: 2px solid #f1f1f1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttons__actions__list {
   list-style: none;
+  display: flex;
+  gap: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px 0 20px;
+}
+
+.avatar {
+  border-radius: 50%;
+  width: 35px;
+}
+
+.buy__item {
+  color: #ff675c;
 }
