--- a/Task 20/assets/css/header.css
+++ b/Task 20/assets/css/header.css
@@ -51,6 +51,10 @@
   padding-bottom: 4px;
 }
 
+.search__input:focus {
+  outline: #dedede;
+}
+
 .search__logo {
   width: 20px;
 }
@@ -64,6 +68,14 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 17px;
+}
+
+.nav__item:hover {
+  cursor: pointer;
+}
+
+.buy__item {
+  color: #ff675c;
 }
 
 .buttons__actions {
@@ -85,11 +97,15 @@
   padding: 0 20px 0 20px;
 }
 
+.buttons__actions__item:hover {
+  cursor: pointer;
+}
+
+.image__profile:hover {
+  cursor: pointer;
+}
+
 .avatar {
   border-radius: 50%;
   width: 35px;
-}
-
-.buy__item {
-  color: #ff675c;
 }
