Добавил второй хеддер

--- a/Task 20/assets/css/main.css
+++ b/Task 20/assets/css/main.css
@@ -13,5 +13,6 @@ body {
   height: 100vh;
 
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+  flex-direction: column;
 }
