--- a/Task 20/assets/css/header.css
+++ b/Task 20/assets/css/header.css
@@ -5,6 +5,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .header {
@@ -72,6 +73,8 @@
 
 .nav__item:hover {
   cursor: pointer;
+  transform: translateY(-2px);
+  transition: transform 0.3s ease;
 }
 
 .buy__item {
@@ -99,13 +102,55 @@
 
 .buttons__actions__item:hover {
   cursor: pointer;
+  transform: translateY(-2px);
+  transition: transform 0.3s ease;
 }
 
 .image__profile:hover {
   cursor: pointer;
+  transform: translateY(-2px);
+  transition: transform 0.3s ease;
 }
 
 .avatar {
   border-radius: 50%;
   width: 35px;
+}
+
+/* Хеддер два */
+
+.header__part__two {
+  display: flex;
+  justify-content: flex-end;
+  border-bottom: 2px solid #f1f1f1;
+  width: 100%;
+}
+
+.header__part__two__button__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 1355px;
+  display: flex;
+  align-items: center;
+  height: 30px;
+  gap: 40px;
+}
+
+.button:hover {
+  cursor: pointer;
+  border-bottom: 2px solid #5eb5e6;
+  transition: transform 0.3s ease;
+  padding-bottom: 11px;
+}
+
+.button:active {
+  border-bottom: 2px solid #5eb5e6;
+}
+
+.button {
+  background: none;
+  border: none;
+  outline: none;
+  color: #888888;
 }
