--- a/Task 20/assets/css/header.css
+++ b/Task 20/assets/css/header.css
@@ -13,9 +13,10 @@
   padding: 0;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
   width: 1280px;
   height: 100px;
+  gap: 50px;
 }
 
 .logo__img {
@@ -108,8 +109,8 @@
 
 .image__profile:hover {
   cursor: pointer;
-  transform: translateY(-2px);
-  transition: transform 0.3s ease;
+  /* transform: translateY(-2px);
+  transition: transform 0.3s ease; */
 }
 
 .avatar {
@@ -140,7 +141,7 @@
 .button:hover {
   cursor: pointer;
   border-bottom: 2px solid #5eb5e6;
-  transition: transform 0.3s ease;
+  transition: transform 0.5s ease;
   padding-bottom: 11px;
 }
 
